code/bash_commands/slurm-14383436.out
  File "/home/frle5739/genome_analysis/code/bash_commands/RPKM.py", line 44
    print(words[0] + "\t", end="")
                              ^
SyntaxError: invalid syntax
